# trunk

./: .gitignore  README.LAYOUT  README.md  foo.sh  rhost_installer.sh  rhostinstall.yml  rhostinstaller.tgz  svn-commit.2.tmp  svn-commit.tmp  °
.svnold/: entries
DevTools/: pre-applypatch  pre-commit  pre-push
Mushcode/: AccountShare  AccountSubsystem  ColorPalette  ColoredSpeech  ExecObject  HSpaceHelper  HSpaceMasterConsole  MedusaObject  Mogrify  MultiDescer  MyrddinBBS  MyrddinBBS5.0  MyrddinBBS5_help.txt  MyrddinCRON  README  RhostSPACE  RockJobs  Roster  TrendObj  TriggerObject  comsys  comsys.notag  daily  follow  hspace-helper  meetme  scan  softfunctions.minmax
Mushcode/hspace/: FighterConsole  HSpaceHelper
Mushcode/mailwrappers/: README  StartObject  brandymail.wrap  brandymailer_rho.txt  muxmail.wrap  pennmail.wrap  pennmail_rho.txt
Mushcode/mailwrappers/force/: brandymail.wrap  muxmail.wrap  pennmail.wrap
Server/: Makefile  README.INSTALLATION  README.PennMUSH  README.first  dirsetup.sh  flatdump_hup.sh  patch.sh  scripts.sh
Server/autoshutdown/: README
Server/convert/: conv.c  conv.template  convm2.c  convm2lock.c  convm2new.c  convtm3.c  convtm31.c  doconvert.sh  penn18x_converter.tgz  pennconv.c  quote2.c  quote2tm31.c  tinyconv.c  utf8clean.c  utf8helpers.h
Server/defaults/game/: alias.conf.default  alternate_netrhost.conf.default  mush.config.default  muxalias.conf.default  netrhost.conf.default  rhost_mysql.conf.default
Server/defaults/src/: local.c.default
Server/game/: README.scripts  Startmush  alias.conf  alternate_netrhost.conf  backup_flat.sh  backup_restart.sh  config_pull.sh  convtime.template  db_check  db_load  db_unload  findit.sh  freeproxy.txt  hidemyass_static.readme  hidemyass_static.txt  html2text.py  mailhide.sh  minimal.sh  mush.config  muxalias.conf  netrhost.conf  netrhost.conf.default  netrhost.log.old  pennalias.conf.default  proxysnarf.sh  proxysnarf.txt  rebroproxy.txt  recovery.sh  rhost_mysql.conf  static_proxies.txt  tm3alias.conf.default  tor_pull.sh
Server/game/cron/: rhost.cron
Server/game/image/: README.IMAGEFORMAT
Server/game/scripts/: README.VARIABLES  aes.sh  compile.sh  compile39.sh  config.sh  debug.sh  (+30 more)
Server/hdrs/: alloc.h  ansi.h  attrs.h  auto2.h  autoconf.h  autow.h  bsd.h  bst.h  cmd_prefix.h  command.h  config.h  copyright.h  db.h  debug.h  door.h  door_prototypes.h  externs.h  fifo.h  file_c.h  flags.h  functions.h  help.h  htab.h  interface.h  levels.h  local.h  lua.h  mail.h  match.h  mdbx_ndbm.h  misc.h  mudconf.h  myndbm.h  news.h  patchlevel.h  patchlevel.template  pcre.h  pcre_extensions.h  redirect_ndbm.h  rhost_ansi.h  (+13 more)
Server/minimal_db/: README  brandymailer_rho.txt  muxmail_rho.txt  netrhost.debugmon  reimaged.conf  reimaged.db.flat
Server/portredirector/: README  moved.txt  portmsg.c
Server/readme/: MDBX.PATCH  MDBX.PATCH2  OUTDATED-NDA  POWER_COMPARE.TXT  README.1ST  README.CONVERT_RHOST_PRIOR_TO_395p2_TO_CURRENT  README.COPYRIGHT  README.CYGWIN  README.DBISCORRUPT  README.DBLOADING  README.GDBM_to_QDBM  README.MAILCANNOTLOAD  README.MODULES  README.MYSQL  README.NEWPASSWDGOD  README.PennMUSH  README.SHUTDOWN  README.SIGNALS  README.SSL  README.STACKLIMIT  README.UBUNTU20-PASSWORDS  README.WINDOWS10-BASH  README.mail  RHOST.CHANGES  help.html  softfunctions  softfunctions.minmax  wizhelp.html
Server/softcode/: +help  comsys  softfunctions.minmax
Server/src/: 64btime.c  MYSQL.Makefile  MYSQL.README  MYSQL.local.c  Makefile  Makefile.in  alloc.c  autoreg.c  boolexp.c  bsd.c  bsd_patch  bst.c  buildnum.sh  cmd_prefix.c  command.c  compat.c  compress.c  conf.c  conf.c.orig  conftest.c  cque.c  create.c  create2.c  crypt.c  crypt_test.c  curl.c  cvrt.c  date.txt  db.c  db_rw.c  dbconvert.c  debug.c  debugmon.c  do_compile.sh  door.c  door_mail.c  door_mush.c  empire.c  eval.c  file_c.c  (+81 more)
Server/src/qdbm-1.8.78/cgi/: Makefile.in  configure  configure.in  qadm.conf  qfts.conf  qupl.c
Server/src/qdbm/java/: DepotTester.java  Villa.java  VillaCursor.java  configure  configure.in  jspex-ja.html  jspex.html  overview
Server/src/qdbm/java/japidoc/: allclasses-noframe.html  constant-values.html  overview-tree.html
Server/src/qdbm/java/japidoc/qdbm/: ADBM.html  Curia.html  CuriaException.html  VillaCursor.html  VillaException.html
Server/stunnel/: README  stunnel.conf.example  stunnel_kill.sh  stunnel_restart.sh  stunnel_setup.sh  stunnel_start.sh  warpbubble.pl
Server/test/: Makefile  bst_test.c
Server/utf8clean/: utf8helpers.c
tests/: test_invariant_functions.h
trunk/: rhost_installer.sh
trunk/Server/: Makefile  README.64bit  dirsetup.sh
trunk/Server/src/qdbm-1.8.77/plus/: Doxyfile  configure.in  xadbm.h  xcrtest.cc  xdepot.h  xspex-ja.html  xvltest.cc
trunk/Server/src/qdbm-1.8.77/plus/xapidoc/: annotated.html  classqdbm_1_1ADBM-members.html  classqdbm_1_1ADBM.html  classqdbm_1_1Curia-members.html  classqdbm_1_1Curia.html  classqdbm_1_1Curia__error.html  classqdbm_1_1DBM__error-members.html  classqdbm_1_1Datum.html  classqdbm_1_1Depot-members.html  classqdbm_1_1Depot.html  classqdbm_1_1Depot__error-members.html  classqdbm_1_1Depot__error.html  classqdbm_1_1Villa-members.html  classqdbm_1_1Villa__error-members.html  classqdbm_1_1Villa__error.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6a.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x74.html  functions_0x76.html  functions_0x77.html  functions_0x7e.html  functions_rela.html  functions_vars.html  hierarchy.html  main.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceqdbm.html  namespaces.html  tree.html
trunk/Server/src/qdbm-1.8.77/ruby/: configure  configure.in  overview  rbspex.html
trunk/Server/src/qdbm-1.8.77/ruby/depot/: extconf.rb
trunk/Server/src/qdbm-1.8.77/ruby/rbapidoc/: curia.rb.html  depot.rb.html  index.html  villa.rb.html
trunk/Server/src/qdbm-1.8.77/ruby/villa/: mod_villa.c  rbvltest
trunk/Server/src/qdbm-1.8.77/ruby/villa/lib/: villa.rb
(+604 files in other folders)
